css/style.css
@charset "utf-8";

@font-face {
    font-family: 'Arita-buri-SemiBold', serif;
    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-buri-SemiBold.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/*===============================================*/
/* GENERAL			 						     */
/*===============================================*/
body{
    font-family: 'MaruBuri', serif;
	font-size:15px;
	/*scrollbar-width: none !important;
	-ms-overflow-style: none !important;*/
	max-width: 100%;
	overflow-x: hidden;
}

/*body::-webkit-scrollbar{
	display: none !important;
	width: 0;
	height: 0;
	background: transparent !important;
	-webkit-appearance: none !important;
}*/


h1,h2,h3,h4,h5,h6{
    font-family: 'MaruBuri', serif;
}

h1, h2, h3, h4, h5, h6,
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
	color: #444444;
}

h1 a:hover, h2 a:hover, h3 a:hover, 
h4 a:hover, h5 a:hover, h6 a:hover{
	color:#f0394d;
}

h1, .h1{
	margin-top: 10px;
	margin-bottom: 30px;
	/*margin-top: 25px*/
}

h2, h3,
.h2, .h3{
	 margin-top: 20px;
  margin-bottom: 20px;
}

h4, h5, h6
.h4, .h5, .h6{
	 margin-top: 10px;
  margin-bottom: 10px;
}

h1, .h1{
	font-size:40px;
}

h2, .h2{
	font-size:30px;
}

h3, .h3{
	font-size:20px;
}

h4, .h4{
	font-size:14px;
}

h5, .h5{
  font-size: 12px;
}

h6, .h6{
  font-size: 10px;
}

h1.inline, h2.inline, h3.inline,
h4.inline, h5.inline, h6.inline{
	display:inline;
	vertical-align:middle; 
}

p{
    font-family: 'MaruBuri', serif;
	font-size:16px;
	line-height:28px;
	margin-bottom:25px;
	color: #6a6a6a;
	
}

p.lead{
	font-size:19px;
	line-height:28px;
	font-weight:normal;
}

a{
	text-decoration:none;
	color:#6a6a6a;
}

a:hover{
	text-decoration:none;
}

.clearboth{
	clear:both;
}

.no-padding{
	padding:0;
}

.no-margin{
	margin:0;
}

img.fullwidth{
	width:100%;
}

img.with-border{
	border:1px solid #6a6a6a;
}

/* Added */
.title-en{
	font-family: 'Bitter', serif;
	font-weight: 300;
	text-transform: uppercase;
	text-align: center;
	letter-spacing: 0.3em;
}

.title-kr{
	font-family: 'MaruBuriSemiBold', serif;
}

.emphasize{
	font-family: 'MaruBuriBold', serif;
}

.description{
	text-align: justify;
	font-family: 'Noto Sans KR', sans-serif;
	line-height: 1.9em;
	margin-bottom: 0.6em;
}

.numberfont{
	font-family: 'Open Sans', sans-serif;
}

/*===============================================*/
/* NAV BAR  	 							     */
/*===============================================*/
#nav-header{
	z-index:1000; 
}

#nav-bar{
	position:relative;
	height:80px;
	width:100%;
	z-index:1000;
	opacity: 0.95;
}

/* ----------------------------------------------*/
/* Width & Color 							     */
/* ----------------------------------------------*/

#nav-bar.fluid-width #nav-wrapper{
	position:relative;
	height:inherit;
	width:100%;
	padding:0px 30px 0px 40px;	
}

#nav-bar.bottom-bar.inside{
	position:absolute;
	/*background-color:transparent;*/
	bottom:0;
}

#nav-bar.bottom-bar.outside{
	position:absolute;
	/*background-color:transparent;*/
	bottom:-80px;
	/* bottom: -145px */
}

#nav-bar.bottom-bar.stick-it{
	position:fixed;
	height:80px; 
	width:100%;
	background-color:#FFF;
	z-index:1500;
	top:0;
	bottom:auto;
	/*-webkit-transform: translateZ(0)*/
	
}

#nav-bar.block-color{
	/*position:relative; */ 
	background-color: #fff;
}

/*.is-sticky #nav-bar.block-color{
	-webkit-transform: translateZ(0)
}*/

/* ----------------------------------------------*/
/* Logo & Nav Position						     */
/* ----------------------------------------------*/

.logo-wrapper{
	position:relative; 
	width:15%; 
	height:auto; 
	/* margin-top:40px; */ /* Deleted */
}

#nav-menu{	
	list-style-type:none; 
	margin:0; 
	/* padding:45px 0 0 0; */ /* Deleted */
	font-family: 'MaruBuri', serif;
	font-size:14px;
	z-index:1000;
	vertical-align: middle;
}

#nav-bar.nav-right .logo-wrapper{
	float:left;
}

#nav-bar.nav-right #nav-menu{
	float:right;
	text-align:right;
	width:80%;
}


/*===============================================*/
/* NAV MENU  	 	 							 */
/*===============================================*/

/* ----------------------------------------------*/
/* Parent Menu						     		 */
/* ----------------------------------------------*/
#nav-menu > li{
	position:relative;
	display:inline;	
}

#nav-menu > li:before{
  	font-family: "fontello";
  	font-style: normal;
  	font-weight: normal;
  	font-size:10px;
	content: '\e9bd';
	color:#fa7991;
	text-align:center;
	display: none; 
}

#nav-menu > li.first-child:before{
	content: "";
	margin-left: 0;
}

#nav-menu > li a{
	display:inline-block;
	padding:30px 15px; /* Nav Bar Edit */
	color:#6a6a6a;
	text-decoration:none;
}

#nav-menu > li a:hover{
	color:#000;
}

/* Transparent 							         */
/* ----------------------------------------------*/
.transparent #nav-menu > li a{
	color:#FFF;
}

.transparent #nav-menu > li a:hover{
	color:#fa7991;
}

.transparent.stick-it #nav-menu > li a{
	color:#666666;
}

/* Additional Class For Nav Center 		         */
/* ----------------------------------------------*/
.first-child-margin{
	margin-left:20px;
}

.last-child-margin{
	margin-right:0px;
}

.split-margin{
	margin-left:100px;
}

/* ----------------------------------------------*/
/* Child Menu								     */
/* ----------------------------------------------*/
#nav-menu ul{
	position:absolute;
	display:none;
	width:200px;	
	left:0;
	list-style-type:none;
	padding:0;
	text-align:left;
	/*border-top:solid 3px #fa7991; Deleted */
}

#nav-menu li:hover > ul{
	display:block;
}

#nav-menu ul li{
	position:relative;
	width:100%;
}

#nav-menu ul li a{
	display:block;
	width:100%;
	background-color:#FFF;
	border-bottom:solid thin #f4f2f2;
}   

#nav-menu ul li a:hover{
	border:none;
	color:#FFF;
}

/* Reset Transparent Child Menu Color	         */
/* ----------------------------------------------*/
.transparent #nav-menu ul li a{
	color:#666666;
}

.transparent #nav-menu ul li a:hover{
	color:#FFF;
}
/* ... */

